# Chamber

./: Cargo.toml  README.md
alfred/: Cargo.toml
alfred/src/: main.rs
bernard/: Cargo.toml
bernard/src/: config.rs  main.rs
common/: Cargo.toml
common/src/: lib.rs
dewey/: README.md
dewey/core/: Cargo.toml
dewey/core/src/: cache.rs  config.rs  dbio.rs  hnsw.rs  ledger.rs  lib.rs  openai.rs  parsing.rs  serialization.rs  test_common.rs
dewey/regression/: Cargo.toml
dewey/regression/src/: main.rs
metatron/: Cargo.toml  README.md
metatron/src/: main.rs
pierre/: Cargo.toml
pierre/src/: main.rs  network.rs  types.rs
william/: Cargo.toml  README.md  bun.lockb  index.html  package-lock.json  package.json
william/src/: db.sql  font.css  main.rs  main.tsx  network.rs  tiktoken.rs  types.rs
william/src-tauri/: Cargo.toml  env_test.sh  tauri.conf.json
william/src-tauri/icons/: icon.icns
william/src-tauri/src/: lib.rs  main.rs  network.rs  old.rs  tiktoken.rs  types.rs
